--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1047,4 +1047,69 @@ WHERE [wait_type] NOT IN ( N'BROKER_EVENTHANDLER', N'BROKER_RECEIVE_WAITFOR', N'
                          )
 AND   waiting_tasks_count &gt; 0;</value>
   </data>
+  <data name="SQLOSLoadedModules" xml:space="preserve">
+    <value>SELECT CONVERT(CHAR(16), base_address, 2) base_address_string,
+       file_version,
+       product_version,
+       debug,
+       patched,
+       prerelease,
+       private_build,
+       special_build,
+       language,
+       company,
+       description,
+       name
+FROM sys.dm_os_loaded_modules</value>
+  </data>
+  <data name="SQLDBTuningOptions" xml:space="preserve">
+    <value>DECLARE @DBName SYSNAME
+DECLARE @SQL NVARCHAR(MAX)
+CREATE TABLE #autotune( 
+	database_id INT NOT NULL,
+	[name] nvarchar(128), 
+	[desired_state_desc] nvarchar(60), 
+	[actual_state_desc] nvarchar(60), 
+	[reason_desc] nvarchar(60) 
+	PRIMARY KEY (database_id,name)
+)
+
+IF OBJECT_ID('sys.database_automatic_tuning_options') IS NOT NULL
+BEGIN
+	DECLARE DBs CURSOR FAST_FORWARD READ_ONLY LOCAL FOR
+	SELECT name
+	FROM sys.databases
+	WHERE state  = 0
+	AND DATABASEPROPERTYEX(name, 'Updateability') = 'READ_WRITE'
+
+	OPEN DBs
+	FETCH NEXT FROM DBs INTO @DBName
+
+	WHILE @@FETCH_STATUS = 0
+	BEGIN
+
+	SET @SQL =  N'USE ' + QUOTENAME(@DBName) + ';
+	SELECT DB_ID(), name, desired_state_desc, actual_state_desc, reason_desc
+	FROM sys.database_automatic_tuning_options;'
+
+	INSERT INTO #autotune(database_id,name,desired_state_desc,actual_state_desc,reason_desc)
+	EXEC  (	@SQL )
+
+	FETCH NEXT FROM DBs INTO @DBName
+	END
+	CLOSE DBs
+	DEALLOCATE DBs
+
+END
+
+
+SELECT database_id,
+       name,
+       desired_state_desc,
+       actual_state_desc,
+       reason_desc 
+FROM #autotune
+
+DROP TABLE #autotune</value>
+  </data>
 </root>
