--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1161,4 +1161,11 @@ DROP TABLE #autotune</value>
 FROM sys.dm_db_resource_stats
 WHERE end_time &gt;= @Date</value>
   </data>
+  <data name="SQLAzureDBServiceObjectives" xml:space="preserve">
+    <value>SELECT edition,
+       service_objective,
+       elastic_pool_name 
+FROM sys.database_service_objectives
+WHERE database_id = DB_ID()</value>
+  </data>
 </root>
