--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1168,4 +1168,20 @@ WHERE end_time &gt;= @Date</value>
 FROM sys.database_service_objectives
 WHERE database_id = DB_ID()</value>
   </data>
+  <data name="SQLAzureDBElasticPoolResourceStats" xml:space="preserve">
+    <value>SELECT start_time,
+       end_time,
+       elastic_pool_name,
+       avg_cpu_percent,
+       avg_data_io_percent,
+       avg_log_write_percent,
+       avg_storage_percent,
+       max_worker_percent,
+       max_session_percent,
+       elastic_pool_dtu_limit,
+       elastic_pool_storage_limit_mb,
+       avg_allocated_storage_percent
+FROM sys.elastic_pool_resource_stats 
+WHERE start_time&gt;=@Date</value>
+  </data>
 </root>
