--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1184,4 +1184,198 @@ WHERE database_id = DB_ID()</value>
 FROM sys.elastic_pool_resource_stats 
 WHERE start_time&gt;=@Date</value>
   </data>
+  <data name="SQLSlowQueries" xml:space="preserve">
+    <value>/* Setup - create event sessions if they don't exist */
+DECLARE @SQL NVARCHAR(MAX)
+DECLARE @EventSessionTemplate NVARCHAR(MAX) = N'CREATE EVENT SESSION [{EventSessionName}] ON SERVER 
+	ADD EVENT sqlserver.rpc_completed(
+		ACTION(sqlserver.client_app_name,sqlserver.client_hostname,sqlserver.database_id,sqlserver.username)
+		WHERE ([duration]&gt;(' + CAST(@SlowQueryThreshold AS NVARCHAR(MAX)) + ') AND ([sqlserver].[client_app_name]&lt;&gt;N''DBAChecksXE''))),
+	ADD EVENT sqlserver.sql_batch_completed(
+		ACTION(sqlserver.client_app_name,sqlserver.client_hostname,sqlserver.database_id,sqlserver.username)
+		WHERE ([duration]&gt;(' + CAST(@SlowQueryThreshold AS NVARCHAR(MAX)) + ') AND ([sqlserver].[client_app_name]&lt;&gt;N''DBAChecksXE'')))
+	ADD TARGET package0.ring_buffer
+	WITH (MAX_MEMORY=4096 KB,EVENT_RETENTION_MODE=ALLOW_MULTIPLE_EVENT_LOSS,MAX_DISPATCH_LATENCY=2 SECONDS,MAX_EVENT_SIZE=0 KB,MEMORY_PARTITION_MODE=NONE,TRACK_CAUSALITY=OFF,STARTUP_STATE=OFF)'
+
+IF NOT EXISTS(SELECT 1 
+			FROM sys.server_event_sessions
+			WHERE name = 'DBAChecks_1'
+			)
+BEGIN
+	SET @SQL = REPLACE(@EventSessionTemplate,'{EventSessionName}','DBAChecks_1')
+	EXEC sp_executesql @SQL
+END
+IF NOT EXISTS(SELECT 1 
+			FROM sys.server_event_sessions
+			WHERE name = 'DBAChecks_2'
+			)
+BEGIN
+	SET @SQL = REPLACE(@EventSessionTemplate,'{EventSessionName}','DBAChecks_2')
+	EXEC sp_executesql @SQL
+END
+
+-- Start the session that is not running to create overlap
+IF NOT EXISTS(
+	SELECT * 
+	FROM sys.dm_xe_sessions
+	WHERE name = 'DBAChecks_1'
+	)
+BEGIN
+	ALTER EVENT SESSION DBAChecks_1
+	ON SERVER
+	State = START
+END
+IF NOT EXISTS(
+	SELECT * 
+	FROM sys.dm_xe_sessions
+	WHERE name = 'DBAChecks_2'
+	)
+BEGIN
+	ALTER EVENT SESSION DBAChecks_2
+	ON SERVER
+	State = START
+END
+
+-- Allow time for events to be dispatched
+WAITFOR DELAY '00:00:01'
+
+DECLARE @target_data NVARCHAR(MAX)
+DECLARE @OldestSession SYSNAME
+-- Return ring buffer from oldest session
+SELECT TOP(1) @target_data= target_data, @OldestSession=s.name
+FROM sys.dm_xe_sessions AS s 
+JOIN sys.dm_xe_session_targets AS t 
+    ON t.event_session_address = s.address
+WHERE s.name IN('DBAChecks_1','DBAChecks_2')
+and t.target_name='ring_buffer'
+ORDER BY s.create_time 
+
+SELECT @target_data as target_data
+-- 
+IF @OldestSession='DBAChecks_1'
+BEGIN
+	ALTER EVENT SESSION DBAChecks_1
+	ON SERVER
+	State = STOP
+END
+ELSE IF @OldestSession='DBAChecks_2'
+BEGIN
+	ALTER EVENT SESSION DBAChecks_2
+	ON SERVER
+	State = STOP
+END</value>
+  </data>
+  <data name="SQLRemoveEventSessions" xml:space="preserve">
+    <value>IF EXISTS(SELECT 1 
+			FROM sys.server_event_sessions
+			WHERE name = 'DBAChecks_1'
+			)
+BEGIN
+	DROP EVENT SESSION DBAChecks_1 ON SERVER;
+END
+IF EXISTS(SELECT 1 
+			FROM sys.server_event_sessions
+			WHERE name = 'DBAChecks_2'
+			)
+BEGIN
+	DROP EVENT SESSION DBAChecks_2 ON SERVER;
+END</value>
+  </data>
+  <data name="SQLSlowQueriesAzure" xml:space="preserve">
+    <value>/* Setup - create event sessions if they don't exist */
+DECLARE @SQL NVARCHAR(MAX)
+DECLARE @EventSessionTemplate NVARCHAR(MAX) = N'CREATE EVENT SESSION [{EventSessionName}] ON DATABASE 
+	ADD EVENT sqlserver.rpc_completed(
+		ACTION(sqlserver.client_app_name,sqlserver.client_hostname,sqlserver.database_id,sqlserver.username)
+		WHERE ([duration]&gt;(' + CAST(@SlowQueryThreshold AS NVARCHAR(MAX)) + ') AND ([sqlserver].[client_app_name]&lt;&gt;N''DBAChecksXE''))),
+	ADD EVENT sqlserver.sql_batch_completed(
+		ACTION(sqlserver.client_app_name,sqlserver.client_hostname,sqlserver.database_id,sqlserver.username)
+		WHERE ([duration]&gt;(' + CAST(@SlowQueryThreshold AS NVARCHAR(MAX)) + ') AND ([sqlserver].[client_app_name]&lt;&gt;N''DBAChecksXE'')))
+	ADD TARGET package0.ring_buffer
+	WITH (MAX_MEMORY=4096 KB,EVENT_RETENTION_MODE=ALLOW_MULTIPLE_EVENT_LOSS,MAX_DISPATCH_LATENCY=2 SECONDS,MAX_EVENT_SIZE=0 KB,MEMORY_PARTITION_MODE=NONE,TRACK_CAUSALITY=OFF,STARTUP_STATE=OFF)'
+
+IF NOT EXISTS(SELECT 1 
+			FROM sys.database_event_sessions
+			WHERE name = 'DBAChecks_1'
+			)
+BEGIN
+	SET @SQL = REPLACE(@EventSessionTemplate,'{EventSessionName}','DBAChecks_1')
+	EXEC sp_executesql @SQL
+END
+IF NOT EXISTS(SELECT 1 
+			FROM sys.database_event_sessions
+			WHERE name = 'DBAChecks_2'
+			)
+BEGIN
+	SET @SQL = REPLACE(@EventSessionTemplate,'{EventSessionName}','DBAChecks_2')
+	EXEC sp_executesql @SQL
+END
+
+-- Start the session that is not running to create overlap
+IF NOT EXISTS(
+	SELECT * 
+	FROM sys.dm_xe_database_sessions
+	WHERE name = 'DBAChecks_1'
+	)
+BEGIN
+	ALTER EVENT SESSION DBAChecks_1
+	ON DATABASE
+	State = START
+END
+IF NOT EXISTS(
+	SELECT * 
+	FROM sys.dm_xe_database_sessions
+	WHERE name = 'DBAChecks_2'
+	)
+BEGIN
+	ALTER EVENT SESSION DBAChecks_2
+	ON DATABASE
+	State = START
+END
+
+-- Allow time for events to be dispatched
+WAITFOR DELAY '00:00:01'
+
+DECLARE @target_data NVARCHAR(MAX)
+DECLARE @OldestSession SYSNAME
+-- Return ring buffer from oldest session
+SELECT TOP(1) @target_data= target_data, @OldestSession=s.name
+FROM sys.dm_xe_database_sessions AS s 
+JOIN sys.dm_xe_database_session_targets AS t 
+    ON t.event_session_address = s.address
+WHERE s.name IN('DBAChecks_1','DBAChecks_2')
+and t.target_name='ring_buffer'
+ORDER BY s.create_time 
+
+SELECT @target_data as target_data
+-- 
+IF @OldestSession='DBAChecks_1'
+BEGIN
+	ALTER EVENT SESSION DBAChecks_1
+	ON DATABASE
+	State = STOP
+END
+ELSE IF @OldestSession='DBAChecks_2'
+BEGIN
+	ALTER EVENT SESSION DBAChecks_2
+	ON DATABASE
+	State = STOP
+END</value>
+  </data>
+  <data name="SQLRemoveEventSessionsAzure" xml:space="preserve">
+    <value>IF EXISTS(SELECT 1 
+			FROM sys.database_event_sessions
+			WHERE name = 'DBAChecks_1'
+			)
+BEGIN
+	DROP EVENT SESSION DBAChecks_1 ON DATABASE;
+END
+IF EXISTS(SELECT 1 
+			FROM sys.database_event_sessions
+			WHERE name = 'DBAChecks_2'
+			)
+BEGIN
+	DROP EVENT SESSION DBAChecks_2 ON DATABASE;
+END</value>
+  </data>
 </root>
