--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -1478,4 +1478,24 @@ BEGIN
 	FROM sys.databases
 END</value>
   </data>
+  <data name="SQLAlerts" xml:space="preserve">
+    <value>SELECT id,
+	name,
+	message_id,
+	severity,
+	enabled,
+	delay_between_responses,
+	msdb.dbo.AGENT_DATETIME(NULLIF(last_occurrence_date,0),last_occurrence_time) last_occurrence,
+	msdb.dbo.AGENT_DATETIME(NULLIF(last_response_date,0),last_response_time) last_response,
+	notification_message,
+	include_event_description,
+	database_name,
+	event_description_keyword,
+	occurrence_count,
+	msdb.dbo.AGENT_DATETIME(NULLIF(count_reset_date,0),count_reset_time) as count_reset,
+	job_id,
+	has_notification,
+	category_id
+FROM msdb..sysalerts</value>
+  </data>
 </root>
