Track DTU limit changes.  Only collect proc stats for current db in azure

--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -919,19 +919,39 @@ EXEC sp_executesql @SQL</value>
   <data name="SQLProcStats" xml:space="preserve">
     <value>IF OBJECT_ID('sys.dm_exec_procedure_stats') IS NOT NULL
 BEGIN
-	SELECT object_id,
-		   database_id,
-		   ISNULL(OBJECT_NAME(object_id, database_id),'') object_name,
-		   total_worker_time,
-		   total_elapsed_time,
-		   total_logical_reads,
-		   total_logical_writes,
-		   total_physical_reads,
-		   cached_time,
-		   execution_count,
-		   GETUTCDATE() AS current_time_utc
-	FROM sys.dm_exec_procedure_stats
-	WHERE database_id &lt;&gt; 32767;
+	IF SERVERPROPERTY('EditionID') =1674378470
+	BEGIN
+		--azure
+		SELECT object_id,
+			   database_id,
+			   ISNULL(OBJECT_NAME(object_id, database_id),'') object_name,
+			   total_worker_time,
+			   total_elapsed_time,
+			   total_logical_reads,
+			   total_logical_writes,
+			   total_physical_reads,
+			   cached_time,
+			   execution_count,
+			   GETUTCDATE() AS current_time_utc
+		FROM sys.dm_exec_procedure_stats
+		WHERE database_id = DB_ID()
+	END
+	ELSE
+	BEGIN
+		SELECT object_id,
+			   database_id,
+			   ISNULL(OBJECT_NAME(object_id, database_id),'') object_name,
+			   total_worker_time,
+			   total_elapsed_time,
+			   total_logical_reads,
+			   total_logical_writes,
+			   total_physical_reads,
+			   cached_time,
+			   execution_count,
+			   GETUTCDATE() AS current_time_utc
+		FROM sys.dm_exec_procedure_stats
+		WHERE database_id &lt;&gt; 32767;
+	END
 END</value>
   </data>
   <data name="SQLCPU" xml:space="preserve">
