Now tracking schema_name and type for proc stats and function stats

--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -933,7 +933,9 @@ BEGIN
 			   total_physical_reads,
 			   cached_time,
 			   execution_count,
-			   GETUTCDATE() AS current_time_utc
+			   GETUTCDATE() AS current_time_utc,
+			   type,
+			   OBJECT_SCHEMA_NAME(object_id, database_id) AS schema_name
 		FROM sys.dm_exec_procedure_stats
 		WHERE database_id = DB_ID()
 	END
@@ -949,7 +951,9 @@ BEGIN
 			   total_physical_reads,
 			   cached_time,
 			   execution_count,
-			   GETUTCDATE() AS current_time_utc
+			   GETUTCDATE() AS current_time_utc,
+			   type,
+			   OBJECT_SCHEMA_NAME(object_id, database_id) AS schema_name
 		FROM sys.dm_exec_procedure_stats
 		WHERE database_id &lt;&gt; 32767;
 	END
@@ -997,7 +1001,9 @@ BEGIN
 		   total_physical_reads,
 		   cached_time,
 		   execution_count,
-		   GETUTCDATE() AS current_time_utc
+		   GETUTCDATE() AS current_time_utc,
+		   type,
+		   OBJECT_SCHEMA_NAME(object_id,database_id) schema_name
 	FROM sys.dm_exec_function_stats
 	WHERE database_id &lt;&gt; 32767;
 END</value>
