Blocking added to performance tab

--- a/DBAChecks/Properties/Resources.resx
+++ b/DBAChecks/Properties/Resources.resx
@@ -830,7 +830,8 @@ CAST(SERVERPROPERTY('SqlSortOrder') as tinyint) as SqlSortOrder ,
 CAST(SERVERPROPERTY('SqlSortOrderName') as nvarchar(128)) as SqlSortOrderName</value>
   </data>
   <data name="SQLCorruption" xml:space="preserve">
-    <value>DECLARE @Corruption TABLE(
+    <value>SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED
+DECLARE @Corruption TABLE(
 		SourceTable TINYINT,
 		database_id INT NOT NULL,
 		last_update_date DATETIME NOT NULL
@@ -846,12 +847,16 @@ BEGIN
 END
 IF OBJECT_ID('msdb.sys.dm_db_mirroring_auto_page_repair') IS NOT NULL
 BEGIN
-	INSERT INTO @Corruption(SourceTable,database_id,last_update_date)
-	SELECT CAST(2 AS TINYINT) AS SourceTable,
-		   database_id,
-		   MAX(modification_time)
-	FROM msdb.sys.dm_db_mirroring_auto_page_repair
-	GROUP BY database_id
+	--Query can be blocked by a database restore even if mirroring is not used, so check if mirroring is being used before running this query
+	IF EXISTS(select * from sys.database_mirroring_endpoints)
+	BEGIN
+		INSERT INTO @Corruption(SourceTable,database_id,last_update_date)
+		SELECT CAST(2 AS TINYINT) AS SourceTable,
+			   database_id,
+			   MAX(modification_time)
+		FROM msdb.sys.dm_db_mirroring_auto_page_repair
+		GROUP BY database_id
+	END
 END
 IF OBJECT_ID('msdb.sys.dm_hadr_auto_page_repair') IS NOT NULL
 BEGIN
